# sample-fastapi-monorepo

./: .env.example  Dockerfile.notification-service  Dockerfile.user-service  QUICKSTART.md  README.md  docker-compose.database.yml  docker-compose.local.yml  docker-compose.qa.yml  main.py  pyproject.toml
libs/shared/: pyproject.toml
libs/shared-lib/: pyproject.toml
libs/shared-lib/src/shared_lib/auth/: jwt_auth.py
libs/shared-lib/src/shared_lib/config/: setting.py
libs/shared-lib/src/shared_lib/database/: __init__.py  db_config.py  engine.py  session_factory.py
libs/shared-lib/src/shared_lib/database/models/: __init__.py  base_entity.py
libs/shared-lib/src/shared_lib/database/models/user/: __init__.py  ft_user.py  role.py
libs/shared-lib/src/shared_lib/dto/: api_response.py  user.py
services/notification-service/: pyproject.toml
services/notification-service/src/notification_service/: __init__.py
services/user-service/: pyproject.toml  test_db_creation.py
services/user-service/src/user_service/: __init__.py  config.py  start_up.py
services/user-service/src/user_service/routes/: user.py
services/user-service/src/user_service/services/: user_service.py
