[project]
name = "sample-fastapi-monorepo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "debugpy>=1.8.17",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.27",
]

[tool.uv.workspace]
members = [
    "services/user-service",
    "services/notification-service",
    "services/user-service/libs/shared-lib",
    "libs/shared-lib",
]
