[project]
name = "shared-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "oyewolz", email = "oyewoletaiwo219@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "greenlet>=3.2.4",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "python-jose[cryptography]>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
