[project]
name = "shared"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "oyewolz", email = "oyewoletaiwo219@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
shared = "shared:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
