[project]
name = "notification-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "oyewolz", email = "oyewoletaiwo219@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.3",
    "uvicorn>=0.38.0",
]

[project.scripts]
notification-service = "notification_service:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
