[project]
name = "user-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "oyewolz", email = "oyewoletaiwo219@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.3",
    "uvicorn>=0.38.0",
    "shared-lib",
    "passlib>=1.7.4",
    "bcrypt==4.0.1",
]
[tool.uv.sources]
shared-lib = {  workspace = true }

[project.scripts]
user-service = "user_service:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
